Thu Feb 04 20:42:24 1999  Tor Lillqvist  <tml@iki.fi>

	* glibconfig.h.win32 config.h.win32: Update GLIB_MICRO_VERSION.

1999-02-04  Christopher Blizzard  <blizzard@redhat.com>

	* glib.spec (Packager): Change my email address

Thu Feb  4 01:45:01 PST 1999 Shawn T. Amundson <amundson@gtk.org>

	* ChangeLog
	  NEWS
	  README
	  configure.in
	  glib.spec
	  docs/glib-config.1: version=1.1.15

	* Released GLib 1.1.15

Tue Feb 02 00:08:54 1999  Tor Lillqvist  <tml@iki.fi>

	* gmessages.c (g_log_default_handler): (Win32:) Don't call
 	ensure_stdout_valid (which would open an unneeded console window)
 	if we're calling a logging function.  Define ensure_stdout_valid
 	as an empty macro on Unix.

	* gutils.c (g_get_any_init): (Win32:) Trust HOME first if defined,
	then try HOMEDRIVE and HOMEPATH.

Mon Feb  1 19:04:28 1999  Owen Taylor  <otaylor@redhat.com>

	* gmain.c (g_main_iterate): Release the main_loop
	 lock around calls to prepare() and check() so
	 that we are not holding the main loop lock
	 over user code.

1999-01-30  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* configure.in: Moved the check for MT safe function variants
	after the determination of the MT cflags and use them there.

1999-01-29  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* configure.in: Fixed typo. Now HPUX 11 thread system detection
	should work.

	* gutils.c (g_get_any_init): Changed initial bufsize to 64. Should
	solve some problems out there.

Wed Jan 27 23:21:50 CST 1999 Shawn T. Amundson <amundson@gtk.org>

	* INSTALL
	  NEWS
	  README
	  configure.in
	  glib.spec
	  docs/glib-config.1: version=1.1.14

	* Released GLib 1.1.14

1999-01-28  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* configure.in: Simplified configure.in test for posix threads,
	systems, that provide /usr/include/pthread.h should also have the
	posix thread library. This is to avoid writing down all the tests
	twice. New test for thread system on HPUX 11. Info from Matt
	Nottingham <matt@sar.dera.gov.uk>.
